index page wells added

--- a/app/assets/stylesheets/routes.css.scss
+++ b/app/assets/stylesheets/routes.css.scss
@@ -3,6 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.buffer {
+.buffer-lg {
 	margin-top:75px;
+}
+
+.buffer-sm {
+	margin-top:40px;
 }
