--- a/app/assets/stylesheets/routes.css.scss
+++ b/app/assets/stylesheets/routes.css.scss
@@ -3,10 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.buffer-lg {
-	margin-top:75px;
-}
-
-.buffer-sm {
-	margin-top:40px;
+.buffer {
+	margin-top:30px;
 }
