--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -2,7 +2,7 @@
 <h1> Welcome to RouteHunters!</h1>
 </div>
 
-<div class="col-lg-offset-1 col-lg-10 buffer-sm">
+<div class="col-lg-offset-1 col-lg-10 buffer">
 <% @routes.each do |route| %>
   <div class="well">
     <h1><%= route.name %></h1><br />
