--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,8 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ // Bootstrap body padding for fixed navbar
+body { padding-top: 60px; }
+
+ 
